<resources>
    <string name="app_name">AgroPomoc</string>
    <string name="button_sor">ŚOR</string>
    <string name="button_calculator">Kalkulator</string>
    <string name="button_notes">Wpływy Wydatki</string>
    <string name="button_todo">Zadania</string>
    <string name="search">Szukaj</string>
    <string name="button_download_label">Pobierz etykietę</string>
    <string name="single_product_use_date_label">OKRES NA ZYŻYCIE ISTNIEJĄCYCH ZAPASÓW DLA UNIESZKODLIWIANIA, PRZECHOWYWANIA I STOSOWANIA:</string>
    <string name="single_product_sell_date_label">OKRES NA ZYŻYCIE ISTNIEJĄCYCH ZAPASÓW DLA SPRZEDAŻY I DYSTRYBUCJI:</string>
    <string name="single_product_expiry_date_label">TERMIN WAŻNOŚCI ZEZWOLENIA:</string>
    <string name="single_product_pro_use_label">ZASTOSOWANIE PRZEZ UŻYTKOWNIKA PROFESJONALNEGO LUB NIEPROFESJONALNEGO:</string>
    <string name="single_product_minor_use_label">ZASTOSOWANIE MAŁOOBSZAROWE:</string>
    <string name="single_product_date_label">TERMIN ZASTOSOWANIA ŚRODKA:</string>
    <string name="single_product_dosage_label">DAWKOWANIE:</string>
    <string name="single_product_pest_label">AGROFAG:</string>
    <string name="single_product_crop_label">UPRAWA:</string>
    <string name="single_product_active_ingredient_label">ZAWARTOŚĆ, NAZWA ZWYCZAJOWA SUBSTANCJI CZYNNEJ:</string>
    <string name="single_product_type_label">RODZAJ ŚRODKA:</string>
    <string name="update">Sprawdź aktualizacje</string>
    <string name="textView_sor_crop_label">Uprawa: </string>
    <string name="textView_sor_pest_label">Agrofag: </string>
    <string name="update_textview">Aktualizowanie rejestru…</string>
    <string name="check_update_text">Sprawdzanie aktualizacji…</string>
    <string name="no_internet_connection">Nie można pobrać etykiety. Sprawdź połączenie z Internetem.</string>
    <string name="sor_product_downloaded_snackbar">Pobrano etykietę</string>
    <string name="sor_product_downloaded_button_snackbar">Otwórz</string>
    <string name="cannot_open_file_snackbar">Nie można otworzyć pliku etykiety!</string>
    <string name="calculator_item1">Obliczanie ilości wysiewu</string>
    <string name="calculator_item2">Obliczanie szacowanego plonu zboża</string>
    <string name="calculator_item3">Obliczanie szacowanego plonu roślin strączkowych</string>
    <string name="calculator_item4">Obliczanie gęstości nasadzenia</string>
    <string name="calculator_item5">Obliczanie strat suszenia</string>
    <string name="calc5result_label">Waga końcowa</string>
    <string name="calc5weight_loss_label">Ubytek wagi</string>
    <string name="calc5initial_weigth_label">Masa początkowa</string>
    <string name="calc5initial_weight">Masa początkowa</string>
    <string name="calc5initial_moisture_label">Wilgotność początkowa</string>
    <string name="calc5initial_moisture">Wilgotność początkowa</string>
    <string name="calc5initial_moisture_unit">%</string>
    <string name="calc5final_moisture_label">Wilgotność końcowa</string>
    <string name="calc5final_moisture">Wilgotność końcowa</string>
    <string name="calc5final_moisture_unit">%</string>
    <string name="calc1result_label">Wynik (ilość wysiewu)</string>
    <string name="calc1tgw_label">Masa tysiąza ziaren (MTZ)</string>
    <string name="calc1tgw_unit">g</string>
    <string name="calc1tgw">MTZ</string>
    <string name="calc1population_label">Obsada</string>
    <string name="calc1population">Obsada</string>
    <string name="calc1population_unit">szt./m²</string>
    <string name="calc1seed_emergency_label">Siła kiełkowania nasion</string>
    <string name="calc1seed_emergency">Siła kiełkowania nasion</string>
    <string name="calc1seed_emergency_unit">%</string>
    <string name="calc1field_emergency_label">Siła kiełkowania pola</string>
    <string name="calc1field_emergency">Siła kiełkowania pola</string>
    <string name="calc1field_emergency_unit">%</string>
    <string name="calc3result_label">Wynik (szacowany plon roślin strączkowych)</string>
    <string name="calc3tgw_label">Masa tysiąza ziaren (MTZ)</string>
    <string name="calc3tgw_unit">g</string>
    <string name="calc3tgw">MTZ</string>
    <string name="calc3population_label">Liczba roślin na jednostce powierzchni</string>
    <string name="calc3population">Liczba roślin na m²</string>
    <string name="calc3population_unit">szt./m²</string>
    <string name="calc3pod_amount_label">Liczba strąków w roślinie</string>
    <string name="calc3pod_amount">Liczba strąków w roślinie</string>
    <string name="calc3pod_amount_unit">szt.</string>
    <string name="calc3grain_amount_label">Liczba nasion w strąku</string>
    <string name="calc3grain_amount">Liczba nasion w strąku</string>
    <string name="calc3grain_amount_unit">szt.</string>
    <string name="calc2result_label">Wynik (szacowany plon zboża)</string>
    <string name="calc2tgw_label">Masa tysiąza ziaren (MTZ)</string>
    <string name="calc2tgw_unit">g</string>
    <string name="calc2tgw">MTZ</string>
    <string name="calc2population_label">Liczba kłosów na jednostce powierzchni</string>
    <string name="calc2population">Liczba kłosów na m²</string>
    <string name="calc2population_unit">szt./m²</string>
    <string name="calc2grain_amount_label">Liczba ziaren w kłosie</string>
    <string name="calc2grain_amount">Liczba ziaren w kłosie</string>
    <string name="calc2grain_amount_unit">szt.</string>
    <string name="calc4result_label">Wynik (gęstość nasadzenia)</string>
    <string name="calc4plant_distance_label">Przestrzeń między roślinami</string>
    <string name="calc4plant_distance_unit">cm</string>
    <string name="calc4plant_distance">Przestrzeń między roślinami</string>
    <string name="calc4row_distance_label">Odległość między środkami rzędów</string>
    <string name="calc4row_distance">Odległość między środkami rzędów</string>
    <string name="calc4row_distance_unit">cm</string>
    <string name="title_activity_notes">Wpływy i wydatki</string>
    <string name="textview_notes_item_date">YYYY/MM/DD</string>
    <string name="textview_notes_item_title">Tytuł notatki</string>
    <string name="textview_notes_item_currency">XXX.XX zł</string>

    <string-array name="areaDensity">
        <item>kg/Ha</item>
        <item>kg/a</item>
        <item>t/Ha</item>
        <item>t/a</item>
    </string-array>

    <string-array name="plantDensity">
        <item>rośliny/Ha</item>
        <item>rośliny/m²</item>
    </string-array>

    <string-array name="weightUnits">
        <item>kg</item>
        <item>t</item>
    </string-array>
    <string name="notes_radio_button_expense">Wydatek</string>
    <string name="notes_radio_button_income">Wpływ</string>
    <string name="note_detail_dialog_title">Usuń element</string>
    <string name="note_detail_dialog_message">Czy na pewno chcesz usunąć ten element?</string>
    <string name="note_detail_dialog_positive_button">TAK</string>
    <string name="note_detail_dialog_negative_button">ANULUJ</string>
    <string name="note_saved_toast">Zapisano nowy element</string>
    <string name="note_not_saved_toast">Nie zapisano elementu</string>
    <string name="note_edited_toast">Zmieniono zawartość elementu</string>
    <string name="note_something_wrong_toast">Coś poszło nie tak…</string>
    <string name="note_deleted_toast">Usunięto element</string>
    <string name="note_balance_info">Wybierz okres na podstawie którego ma zostać obliczony bilans wydatków i wpłat:</string>
    <string name="note_balance_hyphen">—</string>
    <string name="note_balance_button">Oblicz</string>
    <string name="note_balance_income_label">SUMA WPŁAT:</string>
    <string name="note_balance_expense_label">SUMA WYDATKÓW:</string>
    <string name="note_balance_balance_label">BILANS:</string>
    <string name="sor_registry_update_available">Dostępna aktualizacja rejestru ŚOR</string>
    <string name="sor_registry_update_button">Aktualizuj</string>
</resources>