<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_sor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_sor"
        android:text="@string/button_sor"
        app:layout_constraintEnd_toStartOf="@+id/button_calculator"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onClickSorButton"/>

    <Button
        android:id="@+id/button_calculator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:drawableTop="@drawable/ic_calculator"
        android:text="@string/button_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_sor"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_notes"
        android:text="@string/button_notes"
        app:layout_constraintEnd_toStartOf="@+id/button_todo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sor" />

    <Button
        android:id="@+id/button_todo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:drawableTop="@drawable/ic_notifications"
        android:text="@string/button_todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_notes"
        app:layout_constraintTop_toBottomOf="@+id/button_calculator" />
</androidx.constraintlayout.widget.ConstraintLayout>