<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/noteItemImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_up_48" />

    <TextView
        android:id="@+id/noteItemDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/textview_notes_item_date"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/noteItemImageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2021/04/16" />

    <TextView
        android:id="@+id/noteItemTitleTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textview_notes_item_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/noteItemImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/noteItemImageView"
        app:layout_constraintTop_toBottomOf="@+id/noteItemDateTextView"
        tools:text="Tytuł notatki" />

    <TextView
        android:id="@+id/noteItemCurrencyTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textview_notes_item_currency"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#26cb8c"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/noteItemDateTextView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="+99999.99 zł" />
</androidx.constraintlayout.widget.ConstraintLayout>